--- a/SmartRestaurant/SmartRestaurant/Areas/Mobiel/Views/Home/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Mobiel/Views/Home/Index.cshtml
@@ -1,7 +1,372 @@
 ﻿
 @{
     ViewBag.Title = "Index";
+    Layout = null;
 }
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Scripts/mobiel/css/pagedefault.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/mobiel/pagedefault.js"></script>
+    <script src="~/Scripts/vue/vue.min.js" type="text/javascript"></script>
+</head>
+<body>
+    <div class="head">
+        <h1>我是标题</h1>
+    </div>
+    <!-- 自定义页面 -->
+    <div class="main-body">
+        <div class="main-left" >
+            <ul class="main-menu">
+                <li @*data-forid="test1"*@ v-bind:data-forid="'test'+item.tagID" v-for="item in lists" v-on:click="active">{{item.tagName}}</li>
 
-<h2>Index</h2>
+            </ul>
+        </div>
+        <div class="main-right">
+            <div v-bind:id="'test'+item.tagID" v-for="item in lists">
+                <h3>{{item.tagName}}</h3>
+                <ul>
+                    <li v-for="t in item.items">
+                        <div class="content-item">
+                            <div class="menu-img"><img src="/Content/img/pic.png" width="55" height="55" alt="" v-bind:src="t.imgUrl" /></div>
+                            <div class="menu-txt">
+                                <h4>{{t.name}}</h4>
+                                <p class="list1">{{t.summary}}</p>
+                                <p class="list2">
+                                    <b>￥{{t.price}}</b>
+                                    <span class="check-btn">
+                                        <button class="minus" v-on:click="minus($event,t)">
+                                        </button>
+                                        <i>{{t.count}}</i>
+                                        <button class="add" v-on:click="add($event,t)">
+                                        </button>
+                                        <i class="price">{{t.price}}</i>
+                                    </span>
+                                    
+                                </p>
+                            </div>
+                        </div>
+                        
+                    </li>
+                </ul>
+            </div>
 
+        </div>
+    </div>
+    <div class="footer"><div class="shoping"><span class="glyphicon glyphicon-calendar"></span></div><div class="left">
+    已选：<span id="totalcountshow">{{totalCount}}</span>份
+    <br />
+    总计：￥<span id="totalpriceshow">{{totalPrice.toFixed(2)}}</span>元
+</div>
+<button id="submit" class="right btn btn-primary">
+    提交
+</button>   </div>
+    <script>
+
+        var menuData = {
+            lists: [
+                {
+                    tagName: '热销',
+                    tagID: "1",
+                    items: [
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 18.5,
+                            count:0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12.22,
+                            count: 0
+                        }
+                    ]
+                },
+                {
+                    tagName: '优惠',
+                    tagID: "2",
+                    items: [
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        },
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        }
+                    ]
+                },
+                {
+                    tagName: '优惠1',
+                    tagID: "3",
+                    items: [
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        },
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        },
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        }
+                    ]
+                },
+                {
+                    tagName: '精选组合',
+                    tagID: "4",
+                    items: [
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        }
+                    ]
+                },
+                {
+                    tagName: '测试一下',
+                    tagID: "5",
+                    items: [
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        },
+                        {
+                            name: "沙县小吃",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 12,
+                            count: 0
+                        }
+                    ]
+                },
+                {
+                    tagName: '再测一下',
+                    tagID: "6",
+                    items: [
+                        {
+                            name: "黄焖鸡",
+                            summary: "著名小吃",
+                            imgUrl: "/Content/img/pic.png",
+                            price: 19,
+                            count: 0
+                        }
+                    ]
+                },
+                {
+                    tagName: '不测了',
+                    tagID: "7",
+                    items: []
+                }
+            ]
+        };
+
+        var shopData = {
+            totalCount: 0,
+            totalPrice: 0.0,
+            hasSubmitItems: [{
+
+            }]
+        };
+        $(function () {
+            vueCreate();
+            //滚动事件监听
+            $('.main-right').scroll(function () {
+                var top = $(this).scrollTop();
+                var active = "";
+                var sumtop = -10;
+                var height = $(this).height();
+                var flag = true;
+                $(this).children('div').each(function (i,e) {
+                    sumtop+=$(e).height();
+                    if (flag && sumtop >= top)
+                    {
+                        active = $(e).attr("id");
+                        flag = false;
+                        //return false;   //停止循环
+                    }
+
+                });
+                if ((height + top - 10) >= sumtop)
+                {
+                    return;
+                }
+
+                if(active!=$('.main-menu li-active').attr('data-forid'))
+                {
+                    $('.main-menu li').each(function (i, e) {
+                        $(e).removeClass("li-active")
+                    });
+                    $('.main-menu li[data-forid="'+active+'"]').addClass("li-active");
+                }
+
+            })
+
+
+            $(".minus").each(function (i, e) {
+                var n = $(this).next().text();
+                var num = parseInt(n);
+                if(num<=0)
+                {
+                    $(this).next().css("visibility", "hidden");
+                    $(this).css("visibility", "hidden");
+                    jss();//改变按钮样式  
+                    return
+                }
+
+            });
+            //设置第一项选中
+            $('.main-menu li:first').addClass("li-active");
+
+        })
+
+        function liActive(e) {
+            //debugger;
+            $('.main-menu li').each(function (i, e) {
+                $(e).removeClass("li-active")
+            });
+            $(e.target).addClass("li-active");
+            window.location.hash = "#" + $(e.target).attr('data-forid');
+
+
+        }
+        function vueCreate() {
+            //菜品创建
+            new Vue({
+                el: '.main-body',
+                data: menuData,
+                methods: {
+                    active: liActive,
+                    add: addItem,
+                    minus:minusItem
+                }
+            });
+
+            //购物车创建
+            new Vue({
+                el: '.footer',
+                data: shopData
+            });
+        }
+
+        function addItem(event,item) {
+            $(event.target).prevAll().css("visibility", "visible");
+
+            item.count++;
+
+            shopData.totalCount++;
+            shopData.totalPrice += item.price;
+
+            totalChangeAction();//<span style='font-family: Arial, Helvetica, sans-serif;'></span>   改变按钮样式
+        }
+
+        function minusItem(event, item) {
+
+            item.count--;
+            shopData.totalCount--;
+            shopData.totalPrice -= item.price;
+            if (item.count <= 0) {
+                $(event.target).next().css("visibility", "hidden");
+                $(event.target).css("visibility", "hidden");
+                totalChangeAction();//改变按钮样式  
+                return
+            }
+        }
+
+        function totalChangeAction()
+        {
+            if(shopData.totalCount>0)
+            {
+                $("#submit").removeAttr("disabled");
+            }
+            else {
+                $("#submit").attr("disabled", "disabled");
+            }
+        }
+
+        function jss() {
+            var m = $("#totalcountshow").html();
+            if (m > 0) {
+                $(".right").removeAttr("disabled");
+            } else {
+                $(".right").attr("disabled", "disabled");
+            }
+        };
+    </script>
+</body>
+</html>
