--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/_ViewStart.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/_ViewStart.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Layout = "~/Areas/Restaurant/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Areas/Restaurant/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
