--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Home/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Home/Index.cshtml
@@ -1,7 +1,118 @@
 ﻿
-@{
-    ViewBag.Title = "Index";
-}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
-<h2>hello</h2>
+    <link rel="stylesheet" href="~/Content/bootstrap.css"><!--布局样式-->
+    <link rel="stylesheet" href="~/Content/restaurant/layout/layout.css"><!--自定义布局样式-->
+    <link rel="stylesheet" href="~/Content/restaurant/sidebar-menu/sidebar-menu.css"><!--菜单树样式-->
+    <link rel="stylesheet" href="~/Content/restaurant/tab/tab.css"><!--标签页样式-->
 
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    @*bootstrap table组件以及中文包的引用*@
+    <script src="~/Content/restaurant/table/bootstrap-table.js"></script>
+    <link href="~/Content/restaurant/table/bootstrap-table.css" rel="stylesheet" />
+    <script src="~/Content/restaurant/table/bootstrap-table-zh-CN.js"></script>
+
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+</head>
+<body>
+    <div id="top" class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav"></ul>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span2">
+                <div class="sidebar-nav">
+                    <aside class="main-sidebar">
+                        <section id="div_menu" class="sidebar"></section>
+                    </aside>
+                </div><!--/.well -->
+            </div><!--/span-->
+            <div id="span10" class="span10">
+                <ul class="nav nav-tabs" role="tablist"></ul>
+                <div id="tab-content" class="tab-content" style="width:100%;"></div>
+            </div>
+        </div>
+    </div><!--/.fluid-container-->
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+        &copy; @DateTime.Now.Year -自助点餐系统
+    </div>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Content/restaurant/sidebar-menu/sidebar-menu.js"></script>
+    <script src="~/Content/restaurant/tab/tab.js"></script>
+    <script>
+
+        @*$.get('@Url.Content("./test")', function (msg) {
+            console.log(msg);
+        })*@
+
+        $(document).ready(function () {
+            $("#tab-content").height($(window).height()-$("#top").height()-26-20); 
+            ////$(".tab-pane").height($(window).height()-$("#top").height()-26-20);
+            $(window).resize(function () {
+                $("#tab-content").height($(window).height()-$("#top").height()-26-20);
+                $(".tab-pane").height($(window).height()-$("#top").height()-26-20)
+            });
+
+            var item = {'id':'1','name':'首页','url':'Restaurant/Menu','closable':false};
+            closableTab.addTab(item);
+            var isFirstMenu;
+            var menulist = @Html.Raw(Model.ToString());
+            var showlist = $("<ul class=\"sidebar-menu\"></ul>");
+            $("<li class=\"header\">"+menulist.text+"</li>").appendTo(showlist);
+            isFirstMenu = menulist.children.length;
+            showall(menulist.children, showlist);
+            $("#div_menu").append(showlist);
+
+            function showall(menu_list, parent) {
+                for (var menu in menu_list) {
+                    if (menu_list[menu].children.length > 0) {
+                        var li = $("<li></li>");
+                        if (isFirstMenu == 0) {
+                            li = $("<li></li>");
+                        } else {
+                            li = $("<li class=\"treeview\"></li>");
+                            isFirstMenu = isFirstMenu - 1;
+                        }
+                        $(li).append("<a href=\"javascript:void(0)\"><i class=\"glyphicon glyphicon-duplicate\"></i> <span>" + menu_list[menu].text + "</span><i class=\"glyphicon glyphicon-triangle-right\"></i></a>");
+                        var nextParent = $("<ul class=\"treeview-menu\"></ul>");
+                        $(nextParent).appendTo(li);
+                        $(li).appendTo(parent);
+                        showall(menu_list[menu].children, nextParent);
+                    }
+                    else {
+                        $("<li><a href=\"javascript:void(0)\" onclick=\"add("+JSON.stringify(menu_list[menu]).replace(/"/g, '&quot;')+");\"><i class=\"glyphicon glyphicon-file\"></i>"
+                            + menu_list[menu].text
+                            + "</a></li>").appendTo(parent);
+                    }
+                }
+            }
+
+        });
+        function add(item){
+            //var item = {'id':id,'name':name,'url':uri,'closable':closable==1?true:false};
+            if(item.url!=null&&item.url!=null){
+                var url = 'Restaurant/'+item.url;
+                var item = {'id':item.id,'name':item.text,'url':url,'closable':true};
+                closableTab.addTab(item);
+            }
+        }
+    </script>
+</body>
+</html>
