--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Cplxbj/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Cplxbj/Index.cshtml
@@ -28,19 +28,29 @@
 <body>
     <div id="panel-body" class="panel-body" style="padding-bottom:0px;height:662px">
         <div id="toolbar" class="btn-group">
-            <button id="btn_add" type="button" class="btn btn-default" href="Cplxbj/Insert" title="新增类型">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
-            </button>
-            <button id="btn_edit" type="button" class="btn btn-default" href="Cplxbj/Update" title="类型修改">
+            <div>
+                <button id="btn_add" type="button" class="btn btn-default" href="Cplxbj/Insert" title="新增类型">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+                </button>
+                <button id="btn_edit" type="button" class="btn btn-default" href="Cplxbj/Update" title="类型修改">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
-            </button>
-            <button id="btn_delete" type="button" class="btn btn-default" href="Cplxbj/Delete" title="类型删除">
-                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
-            </button>
+                </button>
+                <button id="btn_delete" type="button" class="btn btn-default" href="Cplxbj/Delete" title="类型删除">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+                </button>
+            </div>
         </div>
         <table id="tb_departments"></table>
     </div>
     <script>
+        //使table能根据分辨率的改变而改变
+        $("#panel-body").css("height", $(window).height());
+        $(window).resize(function () {         
+            $("#panel-body").css("height", $(window).height());           
+            $('.bootstrap-table').css('height', $(window).height() - 15);
+            $('.fixed-table-container').css('height', $(window).height() - 15 - 109);
+        });
+
         $(function () {
             //1.初始化Table
             var oTable = new TableInit();
@@ -71,15 +81,15 @@
                     pageNumber: 1,                       //初始化加载第一页，默认第一页
                     pageSize: 10,                       //每页的记录行数（*）
                     pageList: [10, 25, 50, 100],        //可供选择的每页的行数（*）
-                    search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+                    search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
                     strictSearch: true,
-                    showColumns: true,                  //是否显示所有的列
-                    showRefresh: true,                  //是否显示刷新按钮
+                    showColumns: false,                  //是否显示所有的列
+                    showRefresh: false,                  //是否显示刷新按钮
                     minimumCountColumns: 2,             //最少允许的列数
                     clickToSelect: true,                //是否启用点击选中行
-                    height: 642,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+                    height: $(window).height() - 15,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
                     uniqueId: "id",                     //每一行的唯一标识，一般为主键列
-                    showToggle: true,                    //是否显示详细视图和列表视图的切换按钮
+                    showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
                     cardView: false,                    //是否显示详细视图
                     detailView: false,                   //是否显示父子表
                     singleSelect: true,                 // 单选checkbox
