--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Menu/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Menu/Index.cshtml
@@ -22,7 +22,7 @@
     <!--数字步进器 end-->
 </head>
 <body>
-    <div id="panel-body" class="panel-body" style="padding-bottom:0px;height:662px">
+    <div id="panel-body" class="panel-body" style="padding-bottom:0px;">
         @*<div class="panel panel-default">
             <div class="panel-heading">查询条件</div>
             <div class="panel-body">
@@ -58,11 +58,20 @@
         <table id="tb_departments"></table>
     </div>
     <script>
+        $("#panel-body").css("height", $(window).height());
         $(window).resize(function () {
+            //alert($(window).height());
+            $("#panel-body").css("height", $(window).height());
             //alert($("#tb_departments").height());
             //$("#panel-body").css("height", $(window).height());
-            //$('#tb_departments').data('height', 500);
+            $('.bootstrap-table').css('height', $(window).height() - 15);
+            $('.fixed-table-container').css('height', $(window).height() - 15-109);
+            //$('#tb_departments').bootstrapTable('resetView');
             //alert($(window).height());
+            //$('#tb_departments').bootstrapTable({
+            //    height: $(window).height() - 15,
+            //});
+            //$('#tb_departments').bootstrapTable('resetView');
         });
         window.operateEvents = {//注册事件
             'click .btn_edit': function (e, value, row, index) {
@@ -233,15 +242,15 @@
                     pageNumber: 1,                       //初始化加载第一页，默认第一页
                     pageSize: 10,                       //每页的记录行数（*）
                     pageList: [10, 25, 50, 100],        //可供选择的每页的行数（*）
-                    search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+                    search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
                     strictSearch: true,
-                    showColumns: true,                  //是否显示所有的列
-                    showRefresh: true,                  //是否显示刷新按钮
+                    showColumns: false,                  //是否显示所有的列
+                    showRefresh: false,                  //是否显示刷新按钮
                     minimumCountColumns: 2,             //最少允许的列数
                     clickToSelect: true,                //是否启用点击选中行
-                    height: 642,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+                    height: $(window).height()-15,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
                     uniqueId: "id",                     //每一行的唯一标识，一般为主键列
-                    showToggle: true,                    //是否显示详细视图和列表视图的切换按钮
+                    showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
                     cardView: false,                    //是否显示详细视图
                     detailView: true,                   //是否显示父子表
                     //singleSelect: true,                 // 单选checkbox 
