--- a/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Czxxbj/Index.cshtml
+++ b/SmartRestaurant/SmartRestaurant/Areas/Restaurant/Views/Czxxbj/Index.cshtml
@@ -28,15 +28,17 @@
 <body>
     <div id="panel-body" class="panel-body" style="padding-bottom:0px;height:662px">
         <div id="toolbar" class="btn-group">
-            <button id="btn_add" type="button" class="btn btn-default" href="Czlxbj/Insert" title="新增类型">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
-            </button>
-            <button id="btn_edit" type="button" class="btn btn-default" href="Czlxbj/Update" title="类型修改">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
-            </button>
-            <button id="btn_delete" type="button" class="btn btn-default" href="Czlxbj/Delete" title="类型删除">
-                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
-            </button>
+            <div>
+                <button id="btn_add" type="button" class="btn btn-default" href="Czxxbj/Insert" title="新增类型">
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+                </button>
+                <button id="btn_edit" type="button" class="btn btn-default" href="Czxxbj/Update" title="类型修改">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
+                </button>
+                <button id="btn_delete" type="button" class="btn btn-default" href="Czxxbj/Delete" title="类型删除">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+                </button>
+            </div>
         </div>
         <table id="tb_departments"></table>
     </div>
@@ -48,6 +50,7 @@
             $('.bootstrap-table').css('height', $(window).height() - 15);
             $('.fixed-table-container').css('height', $(window).height() - 15 - 109);
         });
+
         $(function () {
             //1.初始化Table
             var oTable = new TableInit();
@@ -65,7 +68,7 @@
             //初始化Table
             oTableInit.Init = function () {
                 $('#tb_departments').bootstrapTable({
-                    url: 'Czlxbj/getList',         //请求后台的URL（*）
+                    url: 'Czxxbj/getList',         //请求后台的URL（*）
                     method: 'get',                      //请求方式（*）
                     toolbar: '#toolbar',                //工具按钮用哪个容器
                     striped: false,                      //是否显示行间隔色
@@ -78,34 +81,42 @@
                     pageNumber: 1,                       //初始化加载第一页，默认第一页
                     pageSize: 10,                       //每页的记录行数（*）
                     pageList: [10, 25, 50, 100],        //可供选择的每页的行数（*）
-                    search: true,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+                    search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
                     strictSearch: true,
-                    showColumns: true,                  //是否显示所有的列
-                    showRefresh: true,                  //是否显示刷新按钮
+                    showColumns: false,                  //是否显示所有的列
+                    showRefresh: false,                  //是否显示刷新按钮
                     minimumCountColumns: 2,             //最少允许的列数
                     clickToSelect: true,                //是否启用点击选中行
                     height: $(window).height() - 15,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
                     uniqueId: "id",                     //每一行的唯一标识，一般为主键列
-                    showToggle: true,                    //是否显示详细视图和列表视图的切换按钮
+                    showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
                     cardView: false,                    //是否显示详细视图
                     detailView: false,                   //是否显示父子表
                     singleSelect: true,                 // 单选checkbox
                     columns: [{
                         checkbox: true
                     },{
-                        field: 'name',
-                        title: '名称',
-                        align: 'center',//水平
-                        width:200
+                        field: 'zh',
+                        title: '桌号'
+
                     }, {
-                        field: 'rs',
-                        align: 'center',//水平
-                        title: '人数',
-                        width: 100
+                        field: 'type',
+                        title: '餐桌类型'
+
+                    }, {
+                        field: 'status',
+                        title: '状态',
+                        formatter: function (value, row, index) {
+                            if (value == 0)
+                                return '未使用'
+                            else if(value == 1)
+                                return '使用中';
+                            else
+                                return '异常';
+                        }
 
                     }, {
                         field: 'remark',
-                        align: 'center',//水平
                         title: '描述'
 
                     }, {
@@ -145,7 +156,7 @@
                         var data = $("#team").serialize();
                         $.ajax({
                             type: "POST",
-                            url: 'Czlxbj/Inserting',
+                            url: 'Czxxbj/Inserting',
                             data: data,
                             dataType: "json",
                             success: function (result) {
@@ -176,7 +187,7 @@
                             var data = $("#team").serialize();
                             $.ajax({
                                 type: "POST",
-                                url: 'Czlxbj/Updating',
+                                url: 'Czxxbj/Updating',
                                 data: data,
                                 dataType: "json",
                                 success: function (result) {
